--- a/correo2.yml
+++ b/correo2.yml
@@ -10,56 +10,83 @@
 #  - name: Include variables for tasks and templates
 #    include_vars:
 #      file: variables.yml
+
   - name: Epel repo is installed
     yum:
       name: epel-release
       state: present 
+
   - name: Install packages
     yum:
       name: "{{ packages}}"
       state: latest
+
   - name: write postfix config file
     template:
       src: ./postfix-main.j2
       dest: /etc/postfix/main.cf
     notify:
     - restart postfix
+
   - name: ensure postfix is running
     service:
       name: postfix
       state: started
       enabled: yes
+      
   - name: enable imap in dovecot
     lineinfile:
       path: /etc/dovecot/dovecot.conf
       line: 'protocols= imap pop3 lmtp'
-  - name: write dovecot config
+
+  - name: copy dovecot mail configuration
     copy: 
       src: ./10-mail.conf
       dest: /etc/dovecot/conf.d/10-mail.conf
     notify: 
     - restart dovecot
-  - name: ensure dovecot is running
+
+   - name: Dovecot running and enabled
     service:
       name: dovecot
       state: started
-      enabled: yes
-  - name: open firewall ports 
+      enabled: true
+
+  - name: Configure squirrelmail
+    template:
+      src: ./squirrelmail.conf.j2
+      dest: /etc/squirrelmail/config.php
+      owner: root
+      group: root
+      mode: 0640
+
+  - name: Apache running and enabled
+    service:
+      name: httpd
+      state: started
+      enabled: true
+      
+  - name: open firewall ports       
     firewalld:
       service: "{{item}}"
-      state: enable
+      state: enabled
       permanent: yes
       immediate: yes
     loop:
     - smtp
     - imap
     - http
-  handlers:
-    - name: restart postfix
-      service:
-        name: postfix
-        state: restarted
-    - name: restart dovecot
-      service:
-        name: dovecot
-        state: restarted
+
+  handlers: 
+  - name: Restart postfix
+    service:
+      name: postfix
+      state: restarted
+      enabled: yes 
+
+  - name: Restart dovecot
+    service:
+      name: dovecot
+      state: restarted
+      enabled: yes   
+
